added hosted videos

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
             <!-- video:1 -->
             <div class="gwd-div-suk4" id="video1">
-                <video id="gwd-video_1" controls class="gwd-video-18oz"  src="video2.mp4">
+                <video id="gwd-video_1" controls class="gwd-video-18oz"  src="https://myhealthframe.nl/videos/video2.mp4">
                  <track src="video2_en.vtt" kind="subtitles" default data-state="active" srclang="en" label="English"> </track>
                 </video>
                 <!-- <div class="gwd-div-14ac" id="subtitles" style="">Standing up, turn your head to the right</div> -->
@@ -415,7 +415,7 @@
 
             <!-- video:2 -->
             <div class="gwd-div-suk4" id="video2">
-                <video id="gwd-video_2" controls class="gwd-video-18oz" src="video12.mp4">
+                <video id="gwd-video_2" controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video12.mp4">
                     <track src="video12_en.vtt" default kind="subtitles" srclang="en" label="English">
                 </video>
                 <!--<div class="gwd-div-14ac" id="subtitle" style="">Standing up, turn your head to the right</div>-->
@@ -454,7 +454,7 @@
 
             <!-- video:3 -->
             <div class="gwd-div-suk4" id="video3">
-                <video id="gwd-video_3" controls class="gwd-video-18oz" src="video2.mp4">
+                <video id="gwd-video_3" controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video2.mp4">
                 <track src="video2_en.vtt" kind="subtitles" srclang="en" label="English">
                 </video>
                 <!-- <div class="gwd-div-14ac" id="subtitle" style="">Standing up, turn your head to the right</div> -->
