--- a/index.html
+++ b/index.html
@@ -387,7 +387,9 @@
 
             <!-- video:1 -->
             <div class="gwd-div-suk4" id="video1">
-                <video id="gwd-video_1" controls class="gwd-video-18oz"  src="https://myhealthframe.nl/videos/video2.mp4">
+                <video id="gwd-video_1" webkit-playsinline controls class="gwd-video-18oz">
+                 <source src="video2.mp4" type="video/mp4">
+                    
                  <track src="video2_en.vtt" kind="subtitles" default data-state="active" srclang="en" label="English"> </track>
                 </video>
                 <!-- <div class="gwd-div-14ac" id="subtitles" style="">Standing up, turn your head to the right</div> -->
@@ -429,7 +431,7 @@
 
             <!-- video:2 -->
             <div class="gwd-div-suk4" id="video2">
-                <video id="gwd-video_2" controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video12.mp4">
+                <video id="gwd-video_2" webkit-playsinline controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video12.mp4">
                     <track src="video12_en.vtt" default kind="subtitles" srclang="en" label="English">
                 </video>
                 <!--<div class="gwd-div-14ac" id="subtitle" style="">Standing up, turn your head to the right</div>-->
@@ -468,7 +470,7 @@
 
             <!-- video:3 -->
             <div class="gwd-div-suk4" id="video3">
-                <video id="gwd-video_3" controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video2.mp4">
+                <video id="gwd-video_3" webkit-playsinline controls class="gwd-video-18oz" src="https://myhealthframe.nl/videos/video2.mp4">
                 <track src="video2_en.vtt" kind="subtitles" srclang="en" label="English">
                 </video>
                 <!-- <div class="gwd-div-14ac" id="subtitle" style="">Standing up, turn your head to the right</div> -->
